# Mozilla-GitHub-Standards

./: .gitignore  README.md  check_CoC.py  pyproject.toml
