[tool.poetry]
name = "Mozilla-GitHub-Requirements"
version = "0.1.0"
description = "Support scripts to increase compliance with Mozilla's GitHub requirements"
authors = ["Hal Wine <hwine@mozilla.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.6"
jsonstreams = "^0.4.1"
PyYAML = "^5.1"
"backports.functools_lru_cache" = "^1.5"
backoff = "^1.8"
"github3.py" = "^1.3"

[tool.poetry.dev-dependencies]
pudb = "^2018.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
